test/expected/regression-http-close.txt
/scripts/regression-http-close.js:21
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:21:15)
    at Server.g (events.js:273:16)
    at emitNone (events.js:80:13)
    at Server.emit (events.js:179:7)
    at emitCloseNT (net.js:1527:8)
    at _combinedTickCallback (node.js:374:13)
    at process._tickCallback (node.js:401:11)
    at Server._emitCloseIfDrained (net.js:1521:11)
    at Server.close (net.js:1505:10)
    at IncomingMessage.end (/scripts/regression-http-close.js:20:14)
    at IncomingMessage.g (events.js:273:16)
    at emitNone (events.js:85:20)
    at IncomingMessage.emit (events.js:179:7)
    at endReadableNT (_stream_readable.js:913:12)
    at _combinedTickCallback (node.js:377:13)
    at process._tickCallback (node.js:401:11)
    at endReadable (_stream_readable.js:904:13)
    at IncomingMessage.Readable.read (_stream_readable.js:365:5)
    at flow (_stream_readable.js:751:26)
    at resume_ (_stream_readable.js:731:3)
    at _combinedTickCallback (node.js:377:13)
    at process._tickCallback (node.js:401:11)
    at resume (_stream_readable.js:719:13)
    at IncomingMessage.Readable.resume (_stream_readable.js:711:5)
    at IncomingMessage.Readable.on (_stream_readable.js:678:10)
    at ClientRequest.get (/scripts/regression-http-close.js:17:9)
    at ClientRequest.g (events.js:273:16)
    at emitOne (events.js:90:13)
    at ClientRequest.emit (events.js:182:7)
    at HTTPParser.parserOnIncomingClient (_http_client.js:458:21)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:103:23)
    at Socket.socketOnData (_http_client.js:348:20)
    at emitOne (events.js:90:13)
    at Socket.emit (events.js:182:7)
    at readableAddChunk (_stream_readable.js:153:18)
    at Socket.Readable.push (_stream_readable.js:111:10)
    at TCP.onread (net.js:529:20)
    at Socket.connect (net.js:884:40)
    at Agent.exports.connect.exports.createConnection (net.js:65:35)
    at Agent.createSocket (_http_agent.js:179:26)
    at Agent.addRequest (_http_agent.js:141:10)
    at new ClientRequest (_http_client.js:147:16)
    at Object.exports.request (http.js:31:10)
    at Object.exports.get (http.js:35:21)
    at Server.listen (/scripts/regression-http-close.js:16:8)
    at Server.g (events.js:273:16)
    at emitNone (events.js:80:13)
    at Server.emit (events.js:179:7)
    at emitListeningNT (net.js:1257:10)
    at _combinedTickCallback (node.js:374:13)
    at process._tickCallback (node.js:401:11)
    at Server._listen2 (net.js:1245:11)
    at listen (net.js:1267:10)
    at net.js:1376:9
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:63:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:82:10)
    at Object.lookup (dns.js:165:19)
    at listenAfterLookup (net.js:1371:20)
    at Server.listen (net.js:1367:5)
    at Object.<anonymous> (/scripts/regression-http-close.js:12:4)
    at Module._compile (module.js:413:34)
    at Object.Module._extensions..js (module.js:422:10)
    at Module.load (module.js:357:32)
    at Function.Module._load (module.js:314:12)
    at Function.Module.runMain (module.js:447:10)
    at startup (node.js:141:18)
    at node.js:933:3
